Right-align the "Close issue" button in the dialog

--- a/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-details-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/apps/content/publish/issue-details-dialog.less
@@ -246,7 +246,6 @@
 
       &.close-issue {
         .dialog-button(@form-button-font, @admin-button-gray3);
-        float: left;
         margin-left: 0;
       }
 
